--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -10,27 +10,19 @@ CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 ## 主题皮肤
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-design=y
+CONFIG_PACKAGE_luci-theme-alpha=y
 ## 外部插件
 CONFIG_PACKAGE_luci-app-oaf=y
 ## 内部插件
+CONFIG_PACKAGE_luci-app-argon-config=y
+#CONFIG_PACKAGE_luci-app-mosdns=y
+#CONFIG_PACKAGE_luci-app-luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-app-ramfree=y
+
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_ddns-scripts-cloudflare=y
-CONFIG_PACKAGE_ddns-scripts-cnkuai=y
-CONFIG_PACKAGE_ddns-scripts-digitalocean=y
-CONFIG_PACKAGE_ddns-scripts-dnspod=y
-CONFIG_PACKAGE_ddns-scripts-dnspod-com=y
-CONFIG_PACKAGE_ddns-scripts-freedns=y
-CONFIG_PACKAGE_ddns-scripts-gandi=y
-CONFIG_PACKAGE_ddns-scripts-godaddy=y
-CONFIG_PACKAGE_ddns-scripts-noip=y
-CONFIG_PACKAGE_ddns-scripts-nsupdate=y
-CONFIG_PACKAGE_ddns-scripts-route53=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-msd_lite=y
 CONFIG_PACKAGE_luci-app-lucky=y
@@ -51,6 +43,35 @@ CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_zsh=y
 CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_sgdisk=y
+CONFIG_PACKAGE_fdisk=y
+
+## 针对5G模块加的一些插件和依赖
+CONFIG_PACKAGE_luci-app-modemband=y
+CONFIG_PACKAGE_luci-app-modem=y
+#CONFIG_PACKAGE_luci-app-3ginfo-lite=y
+
+CONFIG_PACKAGE_fibocom-dial=y
+CONFIG_PACKAGE_meig-cm=y
+CONFIG_PACKAGE_kmod-gobinet=y
+CONFIG_PACKAGE_kmod-qmi_wwan_q=y
+CONFIG_PACKAGE_kmod-qmi_wwan_f=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-option=y
+CONFIG_PACKAGE_kmod-usb-serial-wwan=y
+CONFIG_PACKAGE_kmod-pcie_mhi=y
+CONFIG_PACKAGE_quectel-CM-5G=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_kmod-usb-acm=y
+CONFIG_PACKAGE_kmod-usb-wdm=y
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
+CONFIG_PACKAGE_pciutils=y
+CONFIG_PACKAGE_sms-tool=y
+CONFIG_PACKAGE_jq=y
+
 ## 针对USB3加的一些插件和依赖
 ## RAX3000M eMMC默认配置已开启MT7981_USB_PKGS和luci-app-samba4
 ## MT7981_USB_PKGS := automount blkid blockdev fdisk \
@@ -58,7 +79,6 @@ CONFIG_PACKAGE_sgdisk=y
 ##    luci-app-usb-printer luci-i18n-usb-printer-zh-cn \
 ##    kmod-usb-net-rndis usbutils
 CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-usb3disable=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
