--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -15,8 +15,9 @@ CONFIG_PACKAGE_luci-theme-alpha=y
 CONFIG_PACKAGE_luci-app-oaf=y
 ## 内部插件
 CONFIG_PACKAGE_luci-app-argon-config=y
-#CONFIG_PACKAGE_luci-app-mosdns=y
-#CONFIG_PACKAGE_luci-app-luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-app-mosdns=y
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 
 CONFIG_PACKAGE_luci-app-dockerman=y
