--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -10,14 +10,14 @@ CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 ## 主题皮肤
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-design=y
-CONFIG_PACKAGE_luci-theme-alpha=y
+#CONFIG_PACKAGE_luci-theme-alpha=y
 ## 外部插件
 CONFIG_PACKAGE_luci-app-oaf=y
 ## 内部插件
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-luci-app-netspeedtest=y
+#CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 
 CONFIG_PACKAGE_luci-app-dockerman=y
