--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -52,7 +52,7 @@ CONFIG_PACKAGE_luci-app-modem=y
 CONFIG_PACKAGE_luci-app-cpe=y
 #CONFIG_PACKAGE_luci-app-3ginfo-lite=y
 
-
+CONFIG_PACKAGE_tooter=y
 CONFIG_PACKAGE_fibocom-dial=y
 CONFIG_PACKAGE_meig-cm=y
 CONFIG_PACKAGE_kmod-gobinet=y
