--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -49,7 +49,7 @@ CONFIG_PACKAGE_fdisk=y
 ## 针对5G模块加的一些插件和依赖
 CONFIG_PACKAGE_luci-app-modemband=y
 CONFIG_PACKAGE_luci-app-modem=y
-CONFIG_PACKAGE_luci-app-cpe=y
+#CONFIG_PACKAGE_luci-app-cpe=y
 #CONFIG_PACKAGE_luci-app-3ginfo-lite=y
 
 
