--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -47,14 +47,14 @@ CONFIG_PACKAGE_sgdisk=y
 CONFIG_PACKAGE_fdisk=y
 
 ## 针对5G模块加的一些插件和依赖
-CONFIG_PACKAGE_luci-app-modemband=y
-CONFIG_PACKAGE_luci-app-modem=y
+#CONFIG_PACKAGE_luci-app-modemband=y
+#CONFIG_PACKAGE_luci-app-modem=y
 #CONFIG_PACKAGE_luci-app-cpe=y
 #CONFIG_PACKAGE_luci-app-3ginfo-lite=y
 
 
-CONFIG_PACKAGE_fibocom-dial=y
-CONFIG_PACKAGE_meig-cm=y
+#CONFIG_PACKAGE_fibocom-dial=y
+#CONFIG_PACKAGE_meig-cm=y
 CONFIG_PACKAGE_kmod-gobinet=y
 CONFIG_PACKAGE_kmod-qmi_wwan_q=y
 CONFIG_PACKAGE_kmod-qmi_wwan_f=y
@@ -66,14 +66,14 @@ CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-option=y
 CONFIG_PACKAGE_kmod-usb-serial-wwan=y
 CONFIG_PACKAGE_kmod-pcie_mhi=y
-CONFIG_PACKAGE_quectel-CM-5G=y
+#CONFIG_PACKAGE_quectel-CM-5G=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
-CONFIG_PACKAGE_pciutils=y
-CONFIG_PACKAGE_sms-tool=y
-CONFIG_PACKAGE_jq=y
+#CONFIG_PACKAGE_pciutils=y
+#CONFIG_PACKAGE_sms-tool=y
+#CONFIG_PACKAGE_jq=y
 
 ## 针对USB3加的一些插件和依赖
 ## RAX3000M eMMC默认配置已开启MT7981_USB_PKGS和luci-app-samba4
