--- a/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
+++ b/RAX3000M-eMMC_XR30-eMMC-hanwckf/.mtwifi-cfg.config
@@ -55,9 +55,9 @@ CONFIG_PACKAGE_fdisk=y
 
 #CONFIG_PACKAGE_fibocom-dial=y
 #CONFIG_PACKAGE_meig-cm=y
-CONFIG_PACKAGE_kmod-gobinet=y
-CONFIG_PACKAGE_kmod-qmi_wwan_q=y
-CONFIG_PACKAGE_kmod-qmi_wwan_f=y
+#CONFIG_PACKAGE_kmod-gobinet=y
+#CONFIG_PACKAGE_kmod-qmi_wwan_q=y
+#CONFIG_PACKAGE_kmod-qmi_wwan_f=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
